Bug 231100 - Ark doesn't create lzma and xz archive types
Summary: Ark doesn't create lzma and xz archive types
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Harald Hvaal
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-17 14:57 UTC by Mladen
Modified: 2010-03-25 21:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mladen 2010-03-17 14:57:12 UTC
Version:            (using KDE 4.4.1)
OS:                Linux
Installed from:    Archlinux Packages

Ark can't create lzma or xz tarred archives. Instead, it creates gzip tarred archive with .tar.lzma and .tar.xz extensions.

Ark recognizes and opens properly these file types, but cannot create them.
Comment 1 Raphael Kubo da Costa 2010-03-25 21:11:47 UTC
SVN commit 1107496 by rkcosta:

Set the correct compression type for xz and lzma files.

BUG: 231100


 M  +18 -0     libarchivehandler.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1107496
Comment 2 Raphael Kubo da Costa 2010-03-25 21:13:20 UTC
SVN commit 1107498 by rkcosta:

Backport r1107496.

Set the correct compression type for xz and lzma files.

CCBUG: 231100


 M  +18 -0     libarchivehandler.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1107498