Set the correct compression type for xz and lzma files.

BUG: 231100

svn path=/trunk/KDE/kdeutils/ark/; revision=1107496